# rox

./: .gitignore  .rusty-hook.toml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-MIT  README.md  TODO  a.out  build.rs  clippy.toml  executable  test  test.bc  test.s
.github/ISSUE_TEMPLATE/: bug-report.md  dev-ticket.md
.github/workflows/: ci.yml  security_audit.yml
benches/: benchmark.rs
examples/: array.rox
examples/array/: array_assignment.rox  array_creation.rox
examples/control_flow/: early_return.rox
src/: lib.rs  main.rs  rox_parser.lalrpop  test.lox  test.rox
src/interpreter/: call_frame.rs  chunk.rs  common.rs  compile.rs  function.rs  function_translator.rs  interpret_result.rs  mod.rs  object.rs  op_code.rs  parse_rule.rs  parser.rs  precedence.rs  scanner.rs  stack.rs  syntax.rs  token.rs  value.rs  vm.rs
src/interpreter/traits/: push.rs
src/lib/: chunk.rs  common.rs  compile.rs  interpret_result.rs  mod.rs  parse_rule.rs  parser.rs  precedence.rs  scanner.rs  token.rs  value.rs  vm.rs
src/lib/traits/: push.rs
src/roxc/: compile.rs  compiler_state.rs  errors.rs  function_translator.rs  interpret_result.rs  local.rs  mod.rs  module.rs  rox_result.rs  stack.rs  syntax.rs
src/roxc/builtins/: mod.rs
src/roxc/options/: mod.rs
src/roxc/parser/: mod.rs  syntax.rs
src/roxc/semant/: mod.rs  tagged_syntax.rs  type_checker.rs  types.rs
src/roxc/vm/: call_frame.rs  call_stack.rs  chunk.rs  function.rs  mod.rs  native_function.rs  object.rs  opcode.rs  value.rs
tests/: compilation_test.rs  test_template  variables_test.rs
tests/fixtures/: blocks.rox  functions.rox  variables.rox
