[package]
name = "rox-lang"
version = "0.0.0"
license = "MIT AND Apache-2.0"
description = "The Rox Programming Language"
authors = ["Reese Williams <reese@reesew.io>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/reese/rox"
homepage = "https://github.com/reese/rox"
categories = ["command-line-utilities"]
keywords = ["compiler", "programming language", "rox"]

[package.metadata.docs.rs]
document-private-items = true

[lib]
name = "rox"
path = "src/lib.rs"

[[bin]]
name = "rox"
path = "src/bin/rox.rs"

[[bench]]
name = "benchmark"
harness = false

[build-dependencies]
lalrpop = { version = "0.18.1", features = ["lexer"] }

[dependencies]
cranelift = "0.63"
cranelift-module = "0.63"
cranelift-object = "0.63"
im = "14.3.0"
lalrpop-util = "0.18.1"
regex = "1"
target-lexicon = "0.10.0"

[dev-dependencies]
criterion = "0.3.2"
