[package]
name = "rox-lang"
version = "0.0.1"
license = "MIT AND Apache-2.0"
description = "The Rox Programming Language"
authors = ["Reese Williams <reese@reesew.io>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/reese/rox"
homepage = "https://github.com/reese/rox"
categories = ["command-line-utilities"]
keywords = ["compiler", "rox"]

[package.metadata.docs.rs]
document-private-items = true

[lib]
name = "rox"
path = "src/lib.rs"

[[bin]]
name = "rox"
path = "src/bin/rox.rs"

[[bench]]
name = "benchmark"
harness = false

[build-dependencies]
lalrpop = { version = "0.18.1", features = ["lexer"] }

[dependencies]
codespan-reporting = "0.9.4"
cranelift = "0.65"
cranelift-codegen = "0.65"
cranelift-module = "0.65"
cranelift-object = "0.65"
cranelift-simplejit = "0.65"
im = "14.3.0"
lalrpop-util = "0.18.1"
regex = "1"
structopt = "0.3.15"
target-lexicon = "0.10.0"

[dev-dependencies]
criterion = "0.3.2"
