[package]
name = "rox-lang"
version = "0.0.1"
license = "MIT AND Apache-2.0"
description = "The Rox Programming Language"
authors = ["Reese Williams <reese@reesew.io>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/reese/rox"
homepage = "https://github.com/reese/rox"
categories = ["command-line-utilities"]
keywords = ["compiler", "rox"]

[package.metadata.docs.rs]
document-private-items = true

[lib]
name = "rox"
path = "src/lib.rs"

[[bin]]
name = "rox"
path = "src/bin/rox.rs"

[[bench]]
name = "benchmark"
harness = false

[build-dependencies]
lalrpop = { version = "0.19.1", features = ["lexer"] }
walkdir = "2"

[dependencies]
codespan-reporting = "0.9.5"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm10-0"] }
lalrpop-util = "0.19.1"
structopt = "0.3.15"
tempfile = "3.2.0"

[dev-dependencies]
criterion = "0.3.3"
